# jmap

./: .gitignore  CHANGELOG.md  LICENSE  README.md  jmap.cabal  package.yaml  stack.yaml
src/JMAP/Server/: CoreCapability.hs
src/JMAP/Types/: Base.hs  Error.hs  Request.hs  Response.hs  Session.hs
test/JMAP/Server/: CoreCapabilitySpec.hs
test/JMAP/Server/CoreCapability/: Arbitrary.hs
test/JMAP/Types/: Arbitrary.hs  BaseSpec.hs  ErrorSpec.hs  RequestSpec.hs  ResponseSpec.hs  SessionSpec.hs
test/JMAP/Types/Base/: Arbitrary.hs
test/JMAP/Types/Request/: Arbitrary.hs
test/JMAP/Types/Response/: Arbitrary.hs
test/JMAP/Types/Session/: Arbitrary.hs
